--- a/templates/bmi.html
+++ b/templates/bmi.html
@@ -20,16 +20,7 @@
                 //}
 
                 var output = BMI
-                if (output < 18.5)
-                    document.getElementById("comment").innerText = "Underweight";
-                else if (output >= 18.5 && output <= 25)
-                    document.getElementById("comment").innerText = "Normal";
-                else if (output >= 25 && output <= 30)
-                    document.getElementById("comment").innerText = "Obese";
-                else if (output > 30)
-                    document.getElementById("comment").innerText = "Overweight";
-                else if(isNaN(output))
-                     document.getElementById("comment").innerText = " ";
+               //write code to show a comment in the 'comments' box. State if user is underweight, overweight, normal or obese
             }
         </script>
   </head>
